# sfml_opengl_obj

./: CMakeLists.txt  Makefile  README.md  build_and_run.sh  ubuntu_build.sh
include/: GameAppClass.hpp  GameAppImplementation.hpp  obj_loader.hpp
res/: out.txt
src/: main.cpp
